# real-estate-UAE

./: .gitignore  README.md  main.py  pyproject.toml
data/: master_project_en.txt  project_name_en.txt
mlruns/models/dubai_catboost/: meta.yaml
mlruns/models/dubai_catboost/version-1/: meta.yaml
mlruns/models/dubai_catboost/version-10/: meta.yaml
mlruns/models/dubai_catboost/version-11/: meta.yaml
mlruns/models/dubai_catboost/version-12/: meta.yaml
mlruns/models/dubai_catboost/version-2/: meta.yaml
mlruns/models/dubai_catboost/version-3/: meta.yaml
mlruns/models/dubai_catboost/version-4/: meta.yaml
mlruns/models/dubai_catboost/version-5/: meta.yaml
mlruns/models/dubai_catboost/version-6/: meta.yaml
mlruns/models/dubai_catboost/version-7/: meta.yaml
mlruns/models/dubai_catboost/version-8/: meta.yaml
mlruns/models/dubai_catboost/version-9/: meta.yaml
notebook/: model.ipynb
src/: model_export.py  preprocessing.py  streamlit_app.py  train.py  utils.py
