[project]
name = "real-estate-uae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "mlflow>=2.22.0",
    "optuna>=4.2.1",
    "catboost>=1.2.7",
    "shap>=0.47.0",
    "streamlit>=1.37.1",
    "scikit-learn==1.5.1",
    "seaborn==0.13.0",
    "scipy==1.15.3",
    "numpy==2.2.4",
    "autopep8>=2.3.2",
    "pathlib == 1.0"
]
